Patched strange h3 alignment bug.

--- a/demos/kitchensink/themes/default/components/_child-node-grid.scss
+++ b/demos/kitchensink/themes/default/components/_child-node-grid.scss
@@ -49,7 +49,7 @@
       position: absolute;
       z-index: 10;
       bottom: 0;
-      left: -2px;
+      left: -1px;
       right: 0;
       background-color: rgba(0,0,0,.8);
       color: white;
@@ -86,6 +86,9 @@
     }
 
     .tablet & {
+      h3 {
+        left: -2px; // I have no idea why this isn't the same in both orientations
+      }
       li {
         margin: 10px;
       }
